fixes about page carousel on mobile

--- a/datausa/assets/scss/elements/_about_m.scss
+++ b/datausa/assets/scss/elements/_about_m.scss
@@ -30,7 +30,10 @@ body.about {
   @media only screen and (max-width : 570px) {
 
     #video-container {
-      height: 152px;
+      @include box();
+      height: 202px;
+      margin: -50px auto 0 -25px;
+      width: 100vw;
 
       .video {
         height: 202px;
